@@ -1,3 +1,15 @@
+2004-09-15  Dalibor Topic  <robilad@kaffe.org>
+
+        * libraries/javalib/logging.properties:
+	New file. Taken from GNU Classpath.
+
+        * libraries/javalib/Makefile.am.in:
+	(jrelib_DATA) Added logging.properties.
+
+        * libraries/javalib/Makefile.am,
+        libraries/javalib/Makefile.in:
+	Regenerated.
+
 2004-09-15  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* libraries/javalib/java/net/ServerSocket.java
